opam-version: "1.2"
name:         "encore"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://github.com/dinosaure/encore"
bug-reports:  "https://github.com/dinosaure/encore/issues"
dev-repo:     "https://github.com/dinosaure/encore.git"
doc:          "https://dinosaure.github.io/encore/"
license:      "MIT"

build: [
  ["dune" "subst"]
  ["dune" "build" "-j" jobs]
]
build-test: [["dune" "runtest" "-j" jobs]]

depends: [
  "dune" {build}
  "angstrom" {>= "0.9.0"}
  "ocplib-endian"
  "fmt"
  "alcotest" {test}
]

available: [ocaml-version >= "4.03.0"]
