opam-version: "2.0"
name:         "encore"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://github.com/dinosaure/encore"
bug-reports:  "https://github.com/dinosaure/encore/issues"
dev-repo:     "git+https://github.com/dinosaure/encore.git"
doc:          "https://dinosaure.github.io/encore/"
license:      "MIT"
synopsis:     "Library to generate encoder/decoder which ensure isomorphism"
description: """
Encore is a little library to provide an interface to generate an angstrom decoder and
an internal encoder from a shared description. The goal is to ensure a dual isomorphism
between them.
"""

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "ocaml" {>= "4.03.0"}
  "dune" {build}
  "angstrom" {>= "0.10.0"}
  "fmt"
  "ke" {>= "v0.3"}
  "alcotest" {with-test}
]
