opam-version: "2.0"
name:         "encore"
maintainer:   "Romain Calascibetta <romain.calascibetta@gmail.com>"
authors:      "Romain Calascibetta <romain.calascibetta@gmail.com>"
homepage:     "https://github.com/mirage/encore"
bug-reports:  "https://github.com/mirage/encore/issues"
dev-repo:     "git+https://github.com/mirage/encore.git"
doc:          "https://mirage.github.io/encore/"
license:      "MIT"
synopsis:     "Library to generate encoder/decoder which ensure isomorphism"
description: """
Encore is a little library to provide an interface to generate an angstrom decoder and
an internal encoder from a shared description. The goal is to ensure a dual isomorphism
between them.
"""

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "ocaml" {>= "4.07.0"}
  "dune"  {>= "2.0.0"}
  "angstrom" {>= "0.14.0"}
  "fmt"
  "bigstringaf" {>= "0.5.0"}
  "alcotest" {with-test}
]
